// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharingAndPermissions Page should render the page correctly for Member 1`] = `
<div>
  <div
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <h1
          class="title-1"
        >
          Sharing & Permissions
        </h1>
      </section>
      <section
        class="flex flex-col flex-grow page-section-63_33 items-stretch "
      >
        <div
          class="card-main large-section"
        >
          <div
            class="flex flex-col flex flex-col"
          >
            <a
              class="flex flex-col p-1 link-row cursor-pointer link-row-container"
              href="/member/profile/accountsharing/myinfo"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Share My Information
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  Control how your plan information is shared with your family or individuals outside your plan.
                </div>
              </div>
            </a>
            <a
              class="flex flex-col p-1 link-row cursor-pointer link-row-container"
              href="/member/profile/accountsharing/access"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Access Others' Information
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  View or request access to others' plan information.
                </div>
              </div>
            </a>
            <a
              class="flex flex-col p-1 link-row cursor-pointer link-row-container"
              href="/member/profile/accountsharing/personalrep"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Personal Representative Access
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  A personal representative is an individual with the legal authority to make decisions for others, such as minor dependent or other dependent individual.
                </div>
              </div>
            </a>
            <a
              class="flex flex-col p-1 false cursor-pointer link-row-container"
              href="/member/profile/accountsharing/thirdparty"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Third Party Sharing
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  View the apps and websites you've shared your plan information with.
                </div>
              </div>
            </a>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`SharingAndPermissions Page should render the page correctly for PR 1`] = `
<div>
  <div
    class="flex flex-col justify-center items-center page"
  >
    <div
      class="flex flex-col app-content"
    >
      <span
        style="display: block; width: 1px; min-width: 1px; height: 32px; min-height: 32px;"
      />
      <section
        class="flex justify-start self-start"
      >
        <h1
          class="title-1"
        >
          Sharing & Permissions
        </h1>
      </section>
      <section
        class="flex flex-col flex-grow page-section-63_33 items-stretch "
      >
        <div
          class="card-main large-section"
        >
          <div
            class="flex flex-col flex flex-col"
          >
            <a
              class="flex flex-col p-1 link-row cursor-pointer link-row-container"
              href="/member/profile/accountsharing/myinfo"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Share My Information
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  Control how your plan information is shared with your family or individuals outside your plan.
                </div>
              </div>
            </a>
            <a
              class="flex flex-col p-1 false cursor-pointer link-row-container"
              href="/member/profile/accountsharing/thirdparty"
            >
              <div
                class="flex flex-row m-2"
              >
                <p
                  class="link-row-head mr-2"
                  tabindex="0"
                >
                  Third Party Sharing
                </p>
                <img
                  alt="link"
                  data-nimg="1"
                  decoding="async"
                  height="40"
                  loading="lazy"
                  src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
                  srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
                  style="color: transparent;"
                  width="40"
                />
              </div>
              <div
                class="m-2"
              >
                <div
                  class="body-1 flex flex-row"
                >
                  View the apps and websites you've shared your plan information with.
                </div>
              </div>
            </a>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;
